Fix social icon behavior on small screen

--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@
 }
 
 .sidebar__social__container {
-    position: relative;
-    margin-top: 30vh;
+    position: absolute;
     left: 210px;
+    bottom: 0px;
     transition: var(--sliding-animation);
 }
 
